--- a/lib/github_user_search_web/components/layouts/app.html.heex
+++ b/lib/github_user_search_web/components/layouts/app.html.heex
@@ -1,5 +1,25 @@
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
+<main
+  class="h-[100svh] grid place-content-center"
+  x-data="{
+  init() {
+    if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      document.documentElement.classList.add('dark')
+    } else {
+      document.documentElement.classList.remove('dark')
+    }
+  },
+  toggleTheme: () => {
+      if (localStorage.theme === 'dark') {
+        localStorage.theme = 'light';
+        document.documentElement.classList.remove('dark');
+    } else {
+        localStorage.theme = 'dark';
+        document.documentElement.classList.add('dark');
+    }
+  },
+}"
+>
+  <div>
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
