work on feedback review

--- a/lib/github_user_search_web/components/layouts/app.html.heex
+++ b/lib/github_user_search_web/components/layouts/app.html.heex
@@ -1,24 +1,4 @@
-<main
-  class="h-[100svh] grid place-content-center"
-  x-data="{
-  init() {
-    if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-      document.documentElement.classList.add('dark')
-    } else {
-      document.documentElement.classList.remove('dark')
-    }
-  },
-  toggleTheme: () => {
-      if (localStorage.theme === 'dark') {
-        localStorage.theme = 'light';
-        document.documentElement.classList.remove('dark');
-    } else {
-        localStorage.theme = 'dark';
-        document.documentElement.classList.add('dark');
-    }
-  },
-}"
->
+<main class="bg-[#f6f8ff] dark:bg-[#141D2F] h-[100svh] grid place-content-center">
   <div>
     <.flash_group flash={@flash} />
     <%= @inner_content %>
